Add new property to do functional test against an Elastic at localhost

--- a/broker/src/main/resources/application.yml
+++ b/broker/src/main/resources/application.yml
@@ -45,6 +45,7 @@ com.swisscom.cloud.sb.broker:
       boshManifestFolder: 'test/resources/bosh'
       clientKeystorePath:
       clientKeystorePassword:
+      useLocalhostForTesting:
 
     mongodbent:
       opsManagerUrl: 'http://localhost:55000'
