--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ nbdist/
 **/application-secrets.properties
 
 ### Env specific bosh templates ###
-**/sc1-**.yml
+**/sc1-*.yml
 
 ### GPG rings ###
 local.*
