Add Initial Implementation for SchemaFormService

--- a/broker/src/main/resources/application.yml
+++ b/broker/src/main/resources/application.yml
@@ -136,3 +136,8 @@ com.swisscom.cloud.sb.broker.serviceTemplates:
       kind: Deployment
       metadata:
         name:
+
+com.swisscom.cloud.sb.broker.jsonSchema:
+  hostname: 'localhost'
+  protocol: 'http'
+  port: 8080
